--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .container {
   margin-top: 10%;
   width: 220px;
-  height: 300px;
+  height: max-content;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -24,7 +24,7 @@ input {
   background-color: #d8c4b6;
   border-style: none;
   margin-left: 3.5%;
-  font-size: larger;
+  font-size: xx-large;
   font-weight: 300;
   color: #482121;
   border-radius: 10px;
@@ -39,6 +39,17 @@ input {
   justify-content: center;
 }
 
+button.clear {
+  height: 50px;
+  width: 210px;
+  font-size: 20px;
+  font-weight: 100;
+  border-style: none;
+  margin: 2px;
+  background-color: #ffe5ca;
+  border-radius: 10px;
+}
+
 button {
   height: 50px;
   width: 50px;
@@ -50,6 +61,7 @@ button {
   border-radius: 10px;
 }
 
+button.clear:hover,
 button:hover {
   background-color: #dde6ed;
 }
